init repo with template

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+/content/panorama/scripts/custom_game/**/*.js
+/game/scripts/vscripts/**/*.lua
+
+# Dota 2 stuff
+*.bin
+*.vcss_c
+*.vxml_c
+*.vtex_c
+*.vjs_c
+*.vpcf_c
+*.vmat_c
+*.vpk
+*.vmdl_c
+*.vmesh_c
+*.vsndevts_c
+*.vsnd_c
+panorama_debugger.cfg
+
 # Logs
 logs
 *.log
